tests/ui/args-subcommand-non-subcommand.stderr
error[E0277]: `Deep` is not a `palc::Subcommand`
 --> tests/ui/args-subcommand-non-subcommand.rs:6:11
  |
6 |     deep: Deep,
  |           ^^^^ this type is expected to have `derive(palc::Subcommand)` but it is not
  |
help: the trait `Subcommand` is not implemented for `Deep`
 --> tests/ui/args-subcommand-non-subcommand.rs:9:1
  |
9 | struct Deep {}
  | ^^^^^^^^^^^
note: required by a bound in `GetSubcommand::Subcommand`
 --> src/runtime.rs
  |
  |     type Subcommand: Subcommand;
  |                      ^^^^^^^^^^ required by this bound in `GetSubcommand::Subcommand`

error[E0277]: `Subargs` is not a `palc::Subcommand`
  --> tests/ui/args-subcommand-non-subcommand.rs:14:10
   |
14 |     cmd: Subargs,
   |          ^^^^^^^ this type is expected to have `derive(palc::Subcommand)` but it is not
   |
help: the trait `Subcommand` is not implemented for `Subargs`
  --> tests/ui/args-subcommand-non-subcommand.rs:18:1
   |
18 | struct Subargs {}
   | ^^^^^^^^^^^^^^
note: required by a bound in `GetSubcommand::Subcommand`
  --> src/runtime.rs
   |
   |     type Subcommand: Subcommand;
   |                      ^^^^^^^^^^ required by this bound in `GetSubcommand::Subcommand`

error[E0277]: `Deep` is not a `palc::Subcommand`
 --> tests/ui/args-subcommand-non-subcommand.rs:6:11
  |
6 |     deep: Deep,
  |           ^^^^ this type is expected to have `derive(palc::Subcommand)` but it is not
  |
help: the trait `Subcommand` is not implemented for `Deep`
 --> tests/ui/args-subcommand-non-subcommand.rs:9:1
  |
9 | struct Deep {}
  | ^^^^^^^^^^^

error[E0277]: `Subargs` is not a `palc::Subcommand`
  --> tests/ui/args-subcommand-non-subcommand.rs:14:10
   |
14 |     cmd: Subargs,
   |          ^^^^^^^ this type is expected to have `derive(palc::Subcommand)` but it is not
   |
help: the trait `Subcommand` is not implemented for `Subargs`
  --> tests/ui/args-subcommand-non-subcommand.rs:18:1
   |
18 | struct Subargs {}
   | ^^^^^^^^^^^^^^
